; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp2_32_imul_R_RM.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp2_32_imul_R_RM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 }

@F_CF = common dso_local global i32 0, align 4
@F_OF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.x86emu*)* @x86emuOp2_32_imul_R_RM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @x86emuOp2_32_imul_R_RM(%struct.x86emu* %0) #0 {
  %2 = alloca %struct.x86emu*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %2, align 8
  %6 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %7 = call i32 @fetch_decode_modrm(%struct.x86emu* %6)
  %8 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %9 = call i64* @decode_rh_long_register(%struct.x86emu* %8)
  store i64* %9, i64** %3, align 8
  %10 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %11 = call i64 @decode_and_fetch_long(%struct.x86emu* %10)
  store i64 %11, i64* %4, align 8
  %12 = load i64*, i64** %3, align 8
  %13 = load i64, i64* %12, align 8
  %14 = trunc i64 %13 to i32
  %15 = load i64, i64* %4, align 8
  %16 = trunc i64 %15 to i32
  %17 = mul nsw i32 %14, %16
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp ugt i32 %18, -1
  br i1 %19, label %20, label %25

20:                                               ; preds = %1
  %21 = load i32, i32* @F_CF, align 4
  %22 = call i32 @SET_FLAG(i32 %21)
  %23 = load i32, i32* @F_OF, align 4
  %24 = call i32 @SET_FLAG(i32 %23)
  br label %30

25:                                               ; preds = %1
  %26 = load i32, i32* @F_CF, align 4
  %27 = call i32 @CLEAR_FLAG(i32 %26)
  %28 = load i32, i32* @F_OF, align 4
  %29 = call i32 @CLEAR_FLAG(i32 %28)
  br label %30

30:                                               ; preds = %25, %20
  %31 = load i32, i32* %5, align 4
  %32 = sext i32 %31 to i64
  %33 = load i64*, i64** %3, align 8
  store i64 %32, i64* %33, align 8
  ret void
}

declare dso_local i32 @fetch_decode_modrm(%struct.x86emu*) #1

declare dso_local i64* @decode_rh_long_register(%struct.x86emu*) #1

declare dso_local i64 @decode_and_fetch_long(%struct.x86emu*) #1

declare dso_local i32 @SET_FLAG(i32) #1

declare dso_local i32 @CLEAR_FLAG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
